# inspect-robots

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: index.md
docs/cookbooks/: gr00t-on-yam.md
docs/guide/: adapters.md  cli.md  concepts.md  logging-and-rerun.md  plugins.md  policies-and-embodiments.md  quickstart.md  scoring.md  writing-a-benchmark.md
examples/: quickstart.py
plans/: 0001-foundation-design.md  0002-ensembling-controller.md  0002-rename-to-roboinspect.md  0005-zero-config-cli.md  0006-sim-flag.md  0007-xpolicylab-policy-plugin.md  0008-implementation.md  0008-llm-agent-mode.md  0009-setup-wizard.md  0010-runtime-requirements.md  0011-device-slots.md  0012-nonblocking-rerun-sink.md  0012-surface-timeout.md  0013-embodiment-bind-task-info.md  0013-setup-probe-accepted-current.md  0014-agent-speed-limited-playout.md  0014-rerun-spawn-memory-limit.md  0015-policy-transcript-persistence.md  0016-embodiment-agent-docs.md  0016-frame-video-export.md  0016-ros-embodiment-plugin.md  0017-cancelled-run-log.md  0017-run-status-outcome-line.md  0018-transcript-step-labels.md  0019-transcript-echo.md  0020-rerun-transcript-stream.md  0021-agent-mandatory-notes.md  0021-agent-responses-wire.md  0021-capx-policy-plugin.md  0022-agent-responses-wire.md  0022-html-log-viewer.md  0023-view-embed-frames.md  0024-docusaurus-docs-migration.md  0025-landing-style-and-quickstart-refresh.md  0026-seconds-based-horizons.md
plugins/inspect-robots-agent/: README.md  pyproject.toml
plugins/inspect-robots-agent/src/inspect_robots_agent/: __init__.py  _llm.py  _png.py  _responses.py  _tools.py  policy.py
plugins/inspect-robots-agent/tests/: test_llm.py  test_package.py  test_policy_e2e.py  test_responses.py  test_tools_motion.py
plugins/inspect-robots-capx/: README.md  pyproject.toml
plugins/inspect-robots-capx/src/inspect_robots_capx/: __init__.py  _codec.py  _motion.py  _sandbox.py  _servers.py  policy.py
plugins/inspect-robots-capx/tests/: conftest.py  test_codec.py  test_motion.py  test_policy.py  test_sandbox.py  test_servers.py
plugins/inspect-robots-isaacsim/: README.md  pyproject.toml
plugins/inspect-robots-isaacsim/scripts/: boot_proof.py
plugins/inspect-robots-isaacsim/src/inspect_robots_isaacsim/: __init__.py  embodiment.py
plugins/inspect-robots-isaacsim/tests/: test_isaacsim_embodiment.py
plugins/inspect-robots-ros/: README.md  pyproject.toml
plugins/inspect-robots-ros/src/inspect_robots_ros/: __init__.py  _client.py  _msgs.py  _protocol.py  embodiment.py
plugins/inspect-robots-ros/tests/: _stub_server.py  conftest.py  test_ros_embodiment.py
plugins/inspect-robots-xpolicylab/: README.md  pyproject.toml
plugins/inspect-robots-xpolicylab/src/inspect_robots_xpolicylab/: __init__.py  _client.py  _protocol.py  policy.py
plugins/inspect-robots-xpolicylab/tests/: _stub_server.py  conftest.py  test_xpolicylab_policy.py
plugins/robolens-isaacsim/: README.md  pyproject.toml
plugins/robolens-isaacsim/scripts/: boot_proof.py
plugins/robolens-isaacsim/src/robolens_isaacsim/: __init__.py  embodiment.py
plugins/robolens-isaacsim/tests/: test_isaacsim_embodiment.py
scripts/: gen_api_docs.py
src/inspect_robots/: CLAUDE.md  __init__.py  _defaults.py  _dotenv.py  _html.py  _pngenc.py  _setup.py  _video.py  approver.py  cli.py  compat.py  conformance.py  controller.py  embodiment.py  errors.py  eval.py  frames.py  log.py  policy.py  registry.py  rollout.py  scorer.py  spaces.py  task.py  transcript.py  types.py
src/inspect_robots/logging/: json_log.py  rerun_sink.py  sink.py
src/inspect_robots/mock/: cubepick.py  policies.py
src/roboinspect/: CLAUDE.md  __init__.py  _builtins.py  approver.py  cli.py  compat.py  controller.py  embodiment.py  errors.py  eval.py  frames.py  log.py  policy.py  registry.py  rollout.py  scene.py  scorer.py  spaces.py  task.py  types.py
src/roboinspect/logging/: __init__.py  json_log.py  rerun_sink.py  sink.py
src/roboinspect/mock/: __init__.py  cubepick.py  policies.py
src/robolens/: CLAUDE.md  __init__.py  _builtins.py  approver.py  cli.py  controller.py  embodiment.py  errors.py  eval.py  frames.py  log.py  policy.py  registry.py  rollout.py  scene.py  scorer.py  spaces.py  task.py  types.py
src/robolens/logging/: __init__.py  json_log.py  rerun_sink.py  sink.py
src/robolens/mock/: __init__.py  cubepick.py  policies.py
tests/: conftest.py  test_api_snapshot.py  test_approvers.py  test_compat.py  test_conformance.py  test_controller.py  test_coverage_completion.py  test_defaults.py  test_dotenv.py  test_ensembling.py  test_eval_log.py  test_eval_orchestration.py  test_html_view.py  test_package.py  test_pngenc.py  test_registry_cli.py  test_rerun_sink.py  test_rollout_hardening.py  test_rollout_observation_step.py  test_rollout_transcript_stream.py  test_scorers.py  test_setup.py  test_strict_json.py  test_string_resolution.py  test_task_horizon.py  test_tracer_eval.py  test_types_spaces.py  test_video.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/scripts/: check-api-docs.mjs  gen-llms-txt.mjs
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
