[build-system]
requires = ["hatchling>=1.18", "hatch-fancy-pypi-readme>=24.1"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots-agent"
version = "0.1.0"
description = "LLM agent policy for Inspect Robots: frontier LLMs (Claude, GPT, anything OpenAI-compatible) drive any registered embodiment through tool calls."
dynamic = ["readme"]
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Inspect Robots contributors" }]
keywords = ["robotics", "llm", "agent", "vla", "inspect_robots", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# NOTE: no provider SDKs. The adapter speaks the OpenAI chat-completions wire
# format over one httpx client, which covers OpenRouter, OpenAI, local
# vLLM/Ollama, and Anthropic's OpenAI-compat endpoint (plan 0008 §4a) — the
# same "speak the protocol, don't import the package" doctrine as the
# xpolicylab plugin.
dependencies = [
    "inspect-robots>=0.4",
    "numpy>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.11", "ruff>=0.6"]

# Entry-point discovery: an installed inspect-robots-agent appears in
# `inspect-robots list policies` without being imported first. The registry
# calls this factory by the name `agent`.
[project.entry-points."inspect_robots.policies"]
agent = "inspect_robots_agent.policy:agent_policy"

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots/tree/main/plugins/inspect-robots-agent"
Repository = "https://github.com/robocurve/inspect-robots"

# In the Inspect Robots monorepo this resolves the `inspect_robots` dependency
# to the in-repo core package instead of PyPI. Harmless in a standalone
# checkout (uv ignores a workspace source when there is no workspace root).
[tool.uv.sources]
inspect-robots = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/inspect_robots_agent", "tests", "README.md"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

# PyPI readme: identical to README.md except GitHub-only alert syntax
# (e.g. `> [!NOTE]`) is rewritten to bold blockquotes, which PyPI renders.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!NOTE\][ \t]*$'
replacement = '> **Note:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!TIP\][ \t]*$'
replacement = '> **Tip:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!IMPORTANT\][ \t]*$'
replacement = '> **Important:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!WARNING\][ \t]*$'
replacement = '> **Warning:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!CAUTION\][ \t]*$'
replacement = '> **Caution:**'
