[build-system]
requires = ["hatchling>=1.18", "hatch-fancy-pypi-readme>=24.1"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots-capx"
version = "0.1.0"
description = "Code-as-policy manipulation for Inspect Robots using CaP-X perception and IK servers."
dynamic = ["readme"]
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Inspect Robots contributors" }]
keywords = ["robotics", "llm", "code-as-policy", "capx", "inspect_robots", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# CaP-X itself is intentionally not a dependency. The research checkout owns
# the model servers; this adapter speaks their small HTTP protocol directly.
dependencies = [
    "inspect-robots>=0.4",
    "inspect-robots-agent>=0.12",
    "numpy>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.11", "ruff>=0.6"]

[project.entry-points."inspect_robots.policies"]
capx = "inspect_robots_capx.policy:capx_policy"

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots/tree/main/plugins/inspect-robots-capx"
Repository = "https://github.com/robocurve/inspect-robots"

[tool.uv.sources]
inspect-robots = { workspace = true }
inspect-robots-agent = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots_capx"]

[tool.hatch.build.targets.sdist]
include = ["src/inspect_robots_capx", "tests", "README.md"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["inspect_robots", "inspect_robots_agent", "inspect_robots_capx"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1"]

[tool.mypy]
strict = true

# PyPI readme: identical to README.md except GitHub-only alert syntax
# (e.g. `> [!NOTE]`) is rewritten to bold blockquotes, which PyPI renders.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!NOTE\][ \t]*$'
replacement = '> **Note:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!TIP\][ \t]*$'
replacement = '> **Tip:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!IMPORTANT\][ \t]*$'
replacement = '> **Important:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!WARNING\][ \t]*$'
replacement = '> **Warning:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!CAUTION\][ \t]*$'
replacement = '> **Caution:**'
