[build-system]
requires = ["hatchling>=1.18", "hatch-fancy-pypi-readme>=24.1"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots-ros"
version = "0.1.0"
description = "ROS embodiment adapter for Inspect Robots over the rosbridge websocket protocol."
dynamic = ["readme"]
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Inspect Robots contributors" }]
keywords = ["robotics", "ros", "rosbridge", "inspect_robots", "vla", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "inspect-robots>=0.6",
    "numpy>=1.24",
    "websockets>=12",
    "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.11", "ruff>=0.6"]

[project.entry-points."inspect_robots.embodiments"]
ros = "inspect_robots_ros:ros_embodiment"

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots/tree/main/plugins/inspect-robots-ros"
Repository = "https://github.com/robocurve/inspect-robots"

[tool.uv.sources]
inspect-robots = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots_ros"]

[tool.hatch.build.targets.sdist]
include = ["src/inspect_robots_ros", "tests", "README.md"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["inspect_robots", "inspect_robots_ros"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1"]

[tool.mypy]
strict = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!NOTE\][ \t]*$'
replacement = '> **Note:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!TIP\][ \t]*$'
replacement = '> **Tip:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!IMPORTANT\][ \t]*$'
replacement = '> **Important:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!WARNING\][ \t]*$'
replacement = '> **Warning:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!CAUTION\][ \t]*$'
replacement = '> **Caution:**'
