[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots-xpolicylab"
version = "0.1.0"
description = "XPolicyLab policy adapter for Inspect Robots — evaluate any XPolicyLab-served VLA policy (π0, GR00T, OpenVLA-OFT, RDT, ACT, ...) with Inspect Robots."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Inspect Robots contributors" }]
keywords = ["robotics", "xpolicylab", "vla", "policy-server", "inspect_robots", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# NOTE: `xpolicylab` itself is intentionally NOT a dependency. It is not published
# on PyPI (git-install only) and ships collision-prone top-level packages
# (`client_server`, `utils`). This adapter speaks XPolicyLab's small websocket
# protocol directly; the policy server always runs from the user's XPolicyLab
# checkout in its own environment — that separation is XPolicyLab's core design.
#
# websockets floor: the sync client this adapter uses exists since v11; Isaac Sim
# environments (which the flagship isaacsim pairing shares a venv with) ship v12.
dependencies = [
    "inspect-robots>=0.2",
    "numpy>=1.24",
    "websockets>=12",
    "msgpack>=1.0",
    "msgpack-numpy>=0.4.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.11", "ruff>=0.6"]

# Entry-point discovery: an installed inspect-robots-xpolicylab appears in
# `inspect-robots list policies` without being imported first. The registry calls
# this factory by the name `xpolicylab`.
[project.entry-points."inspect_robots.policies"]
xpolicylab = "inspect_robots_xpolicylab:xpolicylab_policy"

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots/tree/main/plugins/inspect-robots-xpolicylab"
Repository = "https://github.com/robocurve/inspect-robots"

# In the Inspect Robots monorepo this resolves the `inspect_robots` dependency to the
# in-repo core package instead of PyPI. Harmless in a standalone checkout (uv
# ignores a workspace source when there is no workspace root).
[tool.uv.sources]
inspect-robots = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots_xpolicylab"]

[tool.hatch.build.targets.sdist]
include = ["src/inspect_robots_xpolicylab", "tests", "README.md"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

# msgpack / msgpack-numpy ship no type stubs; the codec wraps them in one module.
[[tool.mypy.overrides]]
module = ["msgpack.*", "msgpack_numpy.*"]
ignore_missing_imports = true
